WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164621
After
r207459
ASSERT in CachedResourceLoader under InspectorPageAgent::cachedResource
https://bugs.webkit.org/show_bug.cgi?id=164621
Summary
After r207459 ASSERT in CachedResourceLoader under InspectorPageAgent::cached...
Joseph Pecoraro
Reported
2016-11-10 15:32:03 PST
Summary: After
r207459
ASSERT in CachedResourceLoader under InspectorPageAgent::cachedResource Browsing in debug build with Web Inspector open, or opening inspector on some pages produces this ASSERT: ASSERTION FAILED: !MemoryCache::shouldRemoveFragmentIdentifier(url) Source/WebCore/loader/cache/CachedResourceLoader.cpp(160) : WebCore::CachedResource *WebCore::CachedResourceLoader::cachedResource(const WebCore::URL &) const 1 0x10fa2573d WTFCrash 2 0x1121f6ac2 WebCore::CachedResourceLoader::cachedResource(WebCore::URL const&) const 3 0x112fc7c73 WebCore::InspectorPageAgent::cachedResource(WebCore::Frame*, WebCore::URL const&) 4 0x113df30ab WebCore::PageDebuggerAgent::sourceMapURLForScript(Inspector::ScriptDebugListener::Script const&) 5 0x10f2e293e Inspector::InspectorDebuggerAgent::didParseSource(unsigned long, Inspector::ScriptDebugListener::Script const&) 6 0x10f2e3544 non-virtual thunk to Inspector::InspectorDebuggerAgent::didParseSource(unsigned long, Inspector::ScriptDebugListener::Script const&) 7 0x10f7fecdb Inspector::ScriptDebugServer::dispatchDidParseSource(WTF::HashSet<Inspector::ScriptDebugListener*, WTF::PtrHash<Inspector::ScriptDebugListener*>, WTF::HashTraits<Inspector::ScriptDebugListener*> > const&, JSC::SourceProvider*, bool) 8 0x10f7feff5 Inspector::ScriptDebugServer::sourceParsed(JSC::ExecState*, JSC::SourceProvider*, int, WTF::String const&) 9 0x10ec4b32c JSC::Debugger::attach(JSC::JSGlobalObject*) 10 0x114351f14 WebCore::ScriptController::attachDebugger(WebCore::JSDOMWindowShell*, JSC::Debugger*) 11 0x1143522ff WebCore::ScriptController::attachDebugger(JSC::Debugger*) 12 0x113dd66f7 WebCore::Page::setDebugger(JSC::Debugger*) 13 0x113e08fc7 WebCore::PageScriptDebugServer::attachDebugger() 14 0x10f7ff60e Inspector::ScriptDebugServer::addListener(Inspector::ScriptDebugListener*) 15 0x10f2dcaea Inspector::InspectorDebuggerAgent::enable() 16 0x1149cc6ff WebCore::WebDebuggerAgent::enable() 17 0x113df2f3f WebCore::PageDebuggerAgent::enable() 18 0x10f2dcd48 Inspector::InspectorDebuggerAgent::enable(WTF::String&) 19 0x10f2dcd7c non-virtual thunk to Inspector::InspectorDebuggerAgent::enable(WTF::String&) 20 0x10f2a254a Inspector::DebuggerBackendDispatcher::enable(long, WTF::RefPtr<Inspector::InspectorObject>&&) 21 0x10f2a23e3 Inspector::DebuggerBackendDispatcher::dispatch(long, WTF::String const&, WTF::Ref<Inspector::InspectorObject>&&) 22 0x10f2823bf Inspector::BackendDispatcher::dispatch(WTF::String const&) 23 0x112f0d88c WebCore::InspectorController::dispatchMessageFromFrontend(WTF::String const&) 24 0x10bebb561 WebKit::WebInspector::sendMessageToBackend(WTF::String const&)
Attachments
[PATCH] Proposed Fix
(1.41 KB, patch)
2016-11-10 15:33 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2016-11-10 15:33:08 PST
Created
attachment 294423
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 2
2016-11-10 16:04:19 PST
Comment on
attachment 294423
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 294423 Committed
r208570
: <
http://trac.webkit.org/changeset/208570
>
WebKit Commit Bot
Comment 3
2016-11-10 16:04:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug