After r207459 ASSERT in CachedResourceLoader under InspectorPageAgent::cachedResource https://bugs.webkit.org/show_bug.cgi?id=164621

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-11-10
Reviewed by Youenn Fablet.

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::cachedResource):
CachedResourceLoader expects a sanitized URL.

Canonical link: https://commits.webkit.org/182293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208570 268f45cc-cd09-0410-ab3c-d52691b4dbfc